--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,25 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     tools:context=".ResultActivity">
 
-
-    <TextView
-        android:id="@+id/tv_result"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/vg_header"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="23.66"
-        android:maxLength="5"
-        android:textSize="45dp"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:background="@drawable/gradientebg">
+
+        <ImageView
+            android:src="@drawable/ic_kg"
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="24dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:tint="@color/white" />
+
+        <TextView
+            android:text="Calculadora IMC"
+            android:textSize="24dp"
+            android:layout_marginStart="24dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="Confrime abaixo seu resultado e classificação"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:gravity="center"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="48dp"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="23.66"
+            android:maxLength="5"
+            android:textSize="64dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_calssificacao_label"
+        android:layout_marginTop="48dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="A classificação do seu imc é:" />
@@ -29,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textSize="24dp"
         tools:text="TextView" />
 
 
